# epubicus

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.ja.md  README.md  error.txt
.cargo/: config.toml
docs/: README.md  batch-api-design.md  batch-api-implementation-plan.md  batch-recovery.ja.md  batch-recovery.md  batch-translate-local.ja.md  common-processing.ja.md  multilingual-design.md  operation-guide.ja.md  runtime-progress.ja.md  runtime-progress.md  translation-workflow.ja.md
scripts/: batch-recover-local.ps1  build-release.ps1  build-release.sh  claude-env.template.ps1  claude-env.template.sh  clear-all-caches.ps1  create-glossary.ps1  local-ollama-env.template.ps1  local-ollama-env.template.sh  openai-batch-env.template.ps1  openai-batch-env.template.sh  openai-env.template.ps1  openai-env.template.sh  recover-from-cache.ps1  scan-and-recover.ps1
src/: batch.rs  cache.rs  config.rs  epub.rs  glossary.rs  input_lock.rs  lock.rs  main.rs  progress.rs  prompt.rs  translator.rs  usage.rs  xhtml.rs
src/batch/: io.rs  local.rs  model.rs  remote.rs  report.rs  reroute.rs  run.rs  tests.rs  work.rs
src/recovery/: command.rs  log.rs  mod.rs  report.rs  scan.rs
